# home-holder

./: LICENSE  README.md  docker-compose.yml
backend/: Dockerfile
backend/app/: pyproject.toml
backend/app/app/: main.py
