[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Jesse Thompson <jesse@lifebyspot.com>"]

[tool.poetry.dependencies]
python = "^3.6"
fastapi = "^0.61.0"
uvicorn = "^0.11.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
